fix: Set overflow on chevron

--- a/modules/hanna-css/src/css/InfoBlock.scss
+++ b/modules/hanna-css/src/css/InfoBlock.scss
@@ -25,6 +25,7 @@
     max-width: calc(0.5em + #{$var--grid-margin--right});
     margin-right: MAX(#{$var--grid-margin--right--neg}, -0.5em);
     font-size: between_phone_netbook(49, 89);
+    overflow: hidden;
 
     @include media($mq-wide) {
       font-size: prem(89);
